--- a/webpage/docs/ETHERNET/04_ip/02_ipv4.md
+++ b/webpage/docs/ETHERNET/04_ip/02_ipv4.md
@@ -1,13 +1,72 @@
 # IPv4 - Version 4
 
-Adressen und Klassen
-Die 32 Bit großen IPv4-Adressen werden Byte für Byte als Dezimalzahl mit einem Punkt als Trennzeichen dargestellt (z.B. 192.168.10.1). Für IPv4 wurden vor vielen Jahren Adressklassen definiert, welche die Adressstruktur für den öffentlichen Bereich des Internets regeln. Diese Klassen haben heute zwar keine große praktische Bedeutung mehr, sie erlauben allerdings eine grobe Trennung in Netzwerk- und Hostadresse, so dass ein Rückschluss auf die Knotenanzahl möglich ist.
+IPv4 ist die vierte Version des Internet Protocols und eine der am weitesten verbreiteten Technologien für die Adressierung und Kommunikation in Netzwerken. Es definiert, wie Datenpakete adressiert, geroutet und an die richtigen Ziele übermittelt werden. Dieser Abschnitt beschreibt die Adressstruktur, Subnetze, Multicast- und Broadcast-Funktionen sowie die Verwendung privater Adressen in IPv4.
 
-Lokale Adressen
-Öffentliche IPv4-Adressen sind schon seit Jahren vergeben. Allerdings gibt es lokale bzw. private Adressbereiche, die beispielsweise in Firmen oder Privathaushalten frei genutzt werden dürfen. Da diese Adressen niemals im öffentlichen Netzwerk vorkommen, leitet ein Router lokale Adressen nicht ohne Änderungen in das Internet weiter.
+---
 
-Subnetzmasken
-Die verwendeten Ziel- und Absenderknotenadressen setzen sich aus der linksbündigen Netzwerkadresse und der rechtsbündigen Hostadresse zusammen. Die Festlegung der Position an der die IP-Adresse aufgeteilt wird, erfolgt typischerweise mit Hilfe von Subnetzmasken. Diese können als eigenständige Adresse (z.B. 255.255.255.0) oder als Präfix hinter einer IP-Adresse (z.B. 192.168.10.1/24) beschrieben werden. Während alle linksbündig gesetzten Bits die Netzwerkadresse kennzeichnen (z.B. 24 Bits), erlauben die rechtsbündig ungesetzten Bits einen Rückschluss auf die Hostadresse (z.B. 8 Bits).
+## Adressen und Klassen
 
-Multi- und Broadcast
-Soll ein IP-Paket an mehrere Teilnehmer versendet werden, so können sowohl Multicast- als auch Broadcast-Adressen zum Einsatz kommen. Während Multicast-Adressen konfiguriert oder per IGMP angelegt werden müssen, sind Broadcast-Adressen mit Hilfe der Hostadressen ableitbar. Immer der höchste Wert eines Hostadressbereichs entspricht der zugehörigen Broadcast-Adresse (z.B. 192.168.10.255).
+IPv4-Adressen bestehen aus **32 Bit** und werden üblicherweise in vier 8-Bit-Segmenten (Bytes) dargestellt, die durch Punkte getrennt sind. Beispiel: `192.168.10.1`.
+
+### Adressklassen
+In der frühen Phase von IPv4 wurden Adressklassen eingeführt, um Netzwerke unterschiedlicher Größe zu unterstützen. Obwohl diese Klassen heutzutage durch flexiblere Mechanismen wie CIDR (Classless Inter-Domain Routing) ersetzt wurden, sind sie hilfreich für ein grundlegendes Verständnis der Adressstruktur:
+- **Klasse A**: Netzwerkanteil umfasst die ersten 8 Bits. Geeignet für sehr große Netzwerke. Bereich: `0.0.0.0` bis `127.255.255.255`.
+- **Klasse B**: Netzwerkanteil umfasst die ersten 16 Bits. Geeignet für mittelgroße Netzwerke. Bereich: `128.0.0.0` bis `191.255.255.255`.
+- **Klasse C**: Netzwerkanteil umfasst die ersten 24 Bits. Geeignet für kleine Netzwerke. Bereich: `192.0.0.0` bis `223.255.255.255`.
+- **Klasse D**: Reserviert für Multicast. Bereich: `224.0.0.0` bis `239.255.255.255`.
+- **Klasse E**: Reserviert für experimentelle Zwecke. Bereich: `240.0.0.0` bis `255.255.255.255`.
+
+Die Klassen A, B und C erlauben Rückschlüsse auf die Anzahl der Knoten, die in einem Netzwerk unterstützt werden können.
+
+---
+
+## Lokale Adressen
+
+### Öffentliche vs. private Adressen
+IPv4-Adressen sind in zwei Kategorien unterteilt:
+1. **Öffentliche Adressen**: Für die globale Kommunikation im Internet. Diese Adressen sind limitiert und vollständig durch Organisationen wie die IANA (Internet Assigned Numbers Authority) vergeben.
+2. **Private Adressen**: Für die Nutzung in lokalen Netzwerken. Diese Adressen können frei innerhalb eines Unternehmens oder Haushalts verwendet werden und sind im öffentlichen Internet nicht routbar. Beispiele für private Adressbereiche:
+   - **Klasse A**: `10.0.0.0` bis `10.255.255.255`
+   - **Klasse B**: `172.16.0.0` bis `172.31.255.255`
+   - **Klasse C**: `192.168.0.0` bis `192.168.255.255`
+
+### Netzwerkadressübersetzung (NAT)
+Private Adressen benötigen NAT (Network Address Translation), um mit öffentlichen Netzwerken zu kommunizieren. Ein Router verwendet NAT, um private Adressen in öffentliche Adressen umzuwandeln, wodurch der Zugriff auf das Internet ermöglicht wird.
+
+---
+
+## Subnetzmasken
+
+Eine IPv4-Adresse besteht aus zwei Hauptteilen:
+- **Netzwerkadresse**: Identifiziert das Netzwerk, zu dem die Adresse gehört.
+- **Hostadresse**: Identifiziert spezifische Geräte innerhalb des Netzwerks.
+
+### Definition und Zweck
+Subnetzmasken bestimmen, wie eine IPv4-Adresse in Netzwerk- und Hostadresse aufgeteilt wird. Sie sind in der gleichen Notation wie IPv4-Adressen dargestellt. Beispiel:
+- Subnetzmaske: `255.255.255.0` (binär: `11111111.11111111.11111111.00000000`)
+  - Die ersten 24 Bits repräsentieren die Netzwerkadresse.
+  - Die verbleibenden 8 Bits repräsentieren die Hostadresse.
+
+### Präfixnotation
+Die Subnetzmaske kann auch in Präfixnotation angegeben werden. Beispiel: `192.168.10.1/24`. Hier bedeutet `/24`, dass die ersten 24 Bits die Netzwerkadresse sind.
+
+### Berechnung der Hostanzahl
+Die Anzahl möglicher Hosts in einem Subnetz wird durch die ungesetzten Bits in der Subnetzmaske bestimmt. Formel:
+\[ \text{Maximale Hosts} = 2^{\text{Anzahl der Hostbits}} - 2 \]
+Das Subtrahieren von 2 berücksichtigt die Netzwerkadresse und die Broadcast-Adresse.
+
+---
+
+## Multi- und Broadcast
+
+IPv4 unterstützt die Kommunikation mit mehreren oder allen Knoten innerhalb eines Netzwerks durch **Multicast** und **Broadcast**.
+
+### Multicast
+Multicast-Adressen ermöglichen die gezielte Übertragung von Paketen an eine Gruppe von Empfängern. Diese Adressen liegen im Bereich `224.0.0.0` bis `239.255.255.255` (Klasse D). Multicast wird häufig für Anwendungen wie Videostreaming oder Routing-Protokolle verwendet. Die Verwaltung von Multicast-Gruppen erfolgt über das Internet Group Management Protocol (IGMP).
+
+### Broadcast
+Broadcast-Adressen ermöglichen die Übertragung von Paketen an alle Knoten innerhalb eines Netzwerks. Die Broadcast-Adresse ist die höchste Adresse im Hostadressbereich eines Subnetzes. Beispiel:
+- Subnetz: `192.168.10.0/24`
+- Broadcast-Adresse: `192.168.10.255`
+
+Broadcasts werden häufig für netzwerkweite Ankündigungen oder ARP-Anfragen verwendet. Aufgrund ihrer hohen Netzwerklast wird der Einsatz von Broadcasts in modernen Netzwerken jedoch zunehmend eingeschränkt.
