--- a/webpage/docs/ETHERNET/04_ip/03_ipv6.md
+++ b/webpage/docs/ETHERNET/04_ip/03_ipv6.md
@@ -1,26 +1,66 @@
-
 # IPv6 - Version 6
 
-Hintergrund
-IPv6 wurde hauptsächlich entwickelt um die Adressknappheit von IPv4 zu überwinden und den Routing-Prozess zu optimieren. Die Anzahl der Felder im IPv6 Header ist im Vergleich zu IPv4 von 12 auf 8 Felder reduziert worden.
+IPv6 wurde als Nachfolger von IPv4 entwickelt, um die Einschränkungen des älteren Protokolls zu überwinden, insbesondere die begrenzte Verfügbarkeit von IP-Adressen. IPv6 bietet einen nahezu unbegrenzten Adressraum und optimiert den Routing-Prozess durch eine effizientere Header-Struktur. Dieser Abschnitt untersucht die wichtigsten Merkmale, Adressierungsschemata und Besonderheiten von IPv6.
 
-Adressschreibweise
-Die übliche Schreibweise von IPv6-Adressen ist die Gruppierung von jeweils zwei Byte im hexadezimalen Format mit Doppelpunkt als Trennzeichen. Vier Nullen werden typischerweise nur als eine Null geschrieben oder komplett weggelassen. Anders als bei IPv4 gibt es bei IPv6 keine Broadcast-Adressen. Ein Broadcast ist ein Sonderfall eines Multicasts.
+---
 
-Beispiele für IPv6-Adressen:
+## Hintergrund
 
-1080:0:0:0:8:800:200C:417A (Unicast-Adresse)
-FF01:0:0:0:0:0:0:101 (Multicast-Adresse)
-0:0:0:0:0:0:0:1 (Loopback-Adresse)
-Aufeinanderfolgende Blöcke, die nur Nullen beinhalten, dürfen in IPv6-Adressen einmalig weggelassen werden. Entfallene Blöcke sind unabhängig von deren Anzahl mit zwei Doppelpunkten gekennzeichnet. In einer IPv6-Adresse können zwei aufeinanderfolgende Doppelpunkte somit nur einmalig vorkommen.
+IPv6 adressiert zwei zentrale Herausforderungen von IPv4:
+1. **Adressknappheit**: Während IPv4 nur ca. 4,3 Milliarden eindeutige Adressen bietet, stellt IPv6 durch seinen **128-Bit-Adressraum** eine nahezu unerschöpfliche Anzahl von Adressen bereit. Es können etwa \(3.4 \times 10^{38}\) Adressen generiert werden.
+2. **Routing-Optimierung**: Der IPv6-Header wurde neu gestaltet, um die Verarbeitung zu beschleunigen. Die Anzahl der Felder wurde von 12 auf 8 reduziert, was die Effizienz in Netzwerken erhöht.
 
-1080::8:800:200C:417A (Unicast-Adresse)
-FF01::101 (Multicast-Adresse)
-::1 (Loopback-Adresse)
-IPv4- in IPv6-Adressen
-IPv4-Adressen können auch in IPv6 umgesetzt werden. Hierzu steht auch eine Mischnotation zur Verfügung, die eine Kombination von hexadezimalen und dezimalen Werten erlaubt.
+IPv6 ersetzt Broadcast durch eine erweiterte Nutzung von Multicast, um die Netzwerkauslastung zu verringern.
 
-::13.1.68.3
-::FFFF:129.144.52.38
-Subnetzmasken
-Bei IPv6-Adressen sind, falls nicht durch eine Subnetzmaske anders definiert, 64 Bit für die Netzwerk- und 64 Bit für die Hostadresse vorgesehen. Durch den hinreichend großen Adressraum ist die Verwendung von Subnetzmasken zwar möglich, allerdings wenig gebräuchlich.
+---
+
+## Adressschreibweise
+
+### Grundlegende Struktur
+IPv6-Adressen bestehen aus **128 Bit**, die in **acht 16-Bit-Blöcke** unterteilt sind. Jeder Block wird durch einen **Doppelpunkt (:)** getrennt und im **hexadezimalen Format** dargestellt. Beispiel:
+```
+2001:0db8:85a3:0000:0000:8a2e:0370:7334
+```
+
+### Verkürzungsregeln
+Um IPv6-Adressen kompakter zu schreiben, gelten folgende Regeln:
+1. **Führende Nullen** innerhalb eines Blocks können weggelassen werden:
+   - `0012` wird zu `12`.
+2. **Aufeinanderfolgende Blöcke mit Nullen** können einmalig durch `::` ersetzt werden:
+   - `2001:0db8:0000:0000:0000:ff00:0042:8329` wird zu `2001:db8::ff00:42:8329`.
+3. **Wichtig**: Das Symbol `::` darf in einer Adresse nur einmal verwendet werden, um Mehrdeutigkeiten zu vermeiden.
+
+### Beispiele für IPv6-Adressen
+- **Unicast-Adresse**: `1080::8:800:200C:417A`
+- **Multicast-Adresse**: `FF01::101`
+- **Loopback-Adresse**: `::1`
+
+### IPv4 in IPv6-Adressen
+IPv6 unterstützt die Einbettung von IPv4-Adressen, was die Interoperabilität zwischen den Protokollen erleichtert. Dies erfolgt entweder durch **transparente IPv4-Kompatibilität** oder durch eine **gemischte Notation**:
+- Gemischtes Format: `::13.1.68.3`
+- Mapped IPv4-Adresse: `::FFFF:129.144.52.38`
+
+---
+
+## Subnetzmasken
+
+### Standardaufteilung
+IPv6-Adressen sind standardmäßig in zwei Teile unterteilt:
+1. **Netzwerkanteil**: Die ersten **64 Bit** repräsentieren die Netzwerkadresse.
+2. **Hostanteil**: Die letzten **64 Bit** identifizieren Geräte im Netzwerk.
+
+### Präfixnotation
+Subnetzmasken werden ähnlich wie bei IPv4 durch eine Präfixnotation angegeben. Beispiel:
+- `2001:db8::/64` bedeutet, dass die ersten 64 Bits die Netzwerkadresse darstellen.
+
+### Besonderheiten
+- Aufgrund des großen Adressraums ist die Verwendung von Subnetzen weniger restriktiv. Netzwerke können problemlos viele Adressen zuweisen, ohne auf knappe Ressourcen achten zu müssen.
+- Subnetting ist jedoch weiterhin möglich, insbesondere für organisatorische Zwecke oder spezifische Routing-Anforderungen.
+
+---
+
+## Multicast statt Broadcast
+
+IPv6 ersetzt den Broadcast vollständig durch Multicast. Dies reduziert die Netzwerkauslastung, da Pakete nur an interessierte Knoten gesendet werden. Wichtige Multicast-Adressen:
+- **FF02::1**: Alle Knoten im lokalen Link.
+- **FF02::2**: Alle Router im lokalen Link.
