--- a/webpage/docs/ETHERNET/04_ip/02_ipv4.md
+++ b/webpage/docs/ETHERNET/04_ip/02_ipv4.md
@@ -51,8 +51,7 @@ Subnetzmasken bestimmen, wie eine IPv4-Adresse in Netzwerk- und Hostadresse aufg
 Die Subnetzmaske kann auch in Präfixnotation angegeben werden. Beispiel: `192.168.10.1/24`. Hier bedeutet `/24`, dass die ersten 24 Bits die Netzwerkadresse sind.
 
 ### Berechnung der Hostanzahl
-Die Anzahl möglicher Hosts in einem Subnetz wird durch die ungesetzten Bits in der Subnetzmaske bestimmt. Formel:
-\[ \text{Maximale Hosts} = 2^{\text{Anzahl der Hostbits}} - 2 \]
+Die Anzahl möglicher Hosts in einem Subnetz wird durch die ungesetzten Bits in der Subnetzmaske bestimmt. 
 Das Subtrahieren von 2 berücksichtigt die Netzwerkadresse und die Broadcast-Adresse.
 
 ---
