--- a/webpage/docs/ETHERNET/04_ip/03_ipv6.md
+++ b/webpage/docs/ETHERNET/04_ip/03_ipv6.md
@@ -7,7 +7,7 @@ IPv6 wurde als Nachfolger von IPv4 entwickelt, um die Einschränkungen des älte
 ## Hintergrund
 
 IPv6 adressiert zwei zentrale Herausforderungen von IPv4:
-1. **Adressknappheit**: Während IPv4 nur ca. 4,3 Milliarden eindeutige Adressen bietet, stellt IPv6 durch seinen **128-Bit-Adressraum** eine nahezu unerschöpfliche Anzahl von Adressen bereit. Es können etwa \(3.4 \times 10^{38}\) Adressen generiert werden.
+1. **Adressknappheit**: Während IPv4 nur ca. 4,3 Milliarden eindeutige Adressen bietet, stellt IPv6 durch seinen **128-Bit-Adressraum** eine nahezu unerschöpfliche Anzahl von Adressen bereit. Es können etwa \(3.4 x10^{38}\) Adressen generiert werden.
 2. **Routing-Optimierung**: Der IPv6-Header wurde neu gestaltet, um die Verarbeitung zu beschleunigen. Die Anzahl der Felder wurde von 12 auf 8 reduziert, was die Effizienz in Netzwerken erhöht.
 
 IPv6 ersetzt Broadcast durch eine erweiterte Nutzung von Multicast, um die Netzwerkauslastung zu verringern.
