--- a/webpage/docs/UDS/02_services/02_ECU-Reset.mdx
+++ b/webpage/docs/UDS/02_services/02_ECU-Reset.mdx
@@ -1,3 +1,11 @@
+---
+id: ecu-reset
+title: ECU Reset - 0x11
+---
+
+import plantumlEncoder from 'plantuml-encoder';
+import PlantUML from '@site/src/components/PlantUML';
+
 
 # ECU Reset - 0x11
 
