--- a/webpage/docs/UDS/02_services/03_Security-Access.mdx
+++ b/webpage/docs/UDS/02_services/03_Security-Access.mdx
@@ -1,5 +1,12 @@
+---
+id: security-access
+title: Security Access - 0x27
+---
 
-# Security Access - Service 0x27
+import plantumlEncoder from 'plantuml-encoder';
+import PlantUML from '@site/src/components/PlantUML';
+
+# Security Access - 0x27
 
 As automotive technology evolves and vehicles become more connected, the need for robust security in diagnostic communications has never been greater. The Security Access service, defined as Service 0x27 in the ISO 14229 standard (Unified Diagnostic Services or UDS), plays a pivotal role in safeguarding the vehicle’s Electronic Control Units (ECUs). This service is essential for protecting critical ECU functions from unauthorized access, thus ensuring vehicle safety, security, and privacy.
 
