--- a/webpage/docs/UDS/02_services/05_Write-Data-by-Identifier.mdx
+++ b/webpage/docs/UDS/02_services/05_Write-Data-by-Identifier.mdx
@@ -1,4 +1,10 @@
+---
+id: write-data-by-identifier  
+title: Write Data By Identifier - 0x2E
+---
 
+import plantumlEncoder from 'plantuml-encoder';
+import PlantUML from '@site/src/components/PlantUML';
 
 # Write Data By Identifier - 0x2E
 
